--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.3.2",
     "react": "^18.2.0",
     "react-dadata": "^2.23.0",
     "react-dom": "^18.2.0",
@@ -14,11 +13,10 @@
     "react-router-dom": "^6.8.0",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.1",
-    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start && node exp.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
